--- a/src/index.css
+++ b/src/index.css
@@ -24,3 +24,9 @@ body{
 .btnWrapper{
     margin: 2rem auto;
 }
+
+@media screen and (max-width: 25em){
+    html{
+        font-size: 50%;
+    }
+}
